Add basic authentication

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data source=mydatabase.db"
+  },
+  "TokenKey": "Super secret key impossible to guess!",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
